[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mikey-pro-ruff-config"
version = "10.0.0"
description = "Mikey Pro Ruff configuration - AI agent code quality guardrails for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "Mikl Wolfe", email = "wolfe@mikl.io" },
]
keywords = ["ruff", "linting", "formatting", "python", "mikey-pro", "code-quality", "ai-agent"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/chiefmikey/mikey-pro"
Repository = "https://github.com/chiefmikey/mikey-pro"
Issues = "https://github.com/chiefmikey/mikey-pro/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["ruff.toml"]

[tool.hatch.build.targets.sdist]
include = ["ruff.toml", "pyproject.toml", "README.md", "LICENSE"]
